add write_http buffersize param

--- a/modules/collectd/templates/plugin/write_http.conf.erb
+++ b/modules/collectd/templates/plugin/write_http.conf.erb
@@ -22,6 +22,9 @@
 <% if values['storerates'] -%>
     StoreRates <%= values['storerates'] %>
 <% end -%>
+<% if values['buffersize'] -%>
+    BufferSize <%= values['buffersize'] %>
+<% end -%>
   </URL>
 <% end -%>
 </Plugin>
