write_http: convert url to node

--- a/modules/collectd/templates/plugin/write_http.conf.erb
+++ b/modules/collectd/templates/plugin/write_http.conf.erb
@@ -1,6 +1,9 @@
 <Plugin "write_http">
-<% @urls.each do |name,values| -%>
-  <URL "<%= name %>">
+<% @nodes.each do |name,values| -%>
+  <Node "<%= name %>">
+<% if values['url'] -%>
+    URL "<%= values['url'] %>"
+<% end -%>
 <% if values['user'] -%>
     User "<%= values['user'] %>"
 <% end -%>
@@ -25,6 +28,6 @@
 <% if values['buffersize'] -%>
     BufferSize <%= values['buffersize'] %>
 <% end -%>
-  </URL>
+  </Node>
 <% end -%>
 </Plugin>
